PostgreSQL repository implementation + Dockerization